--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>site teste</title>
 </head>
 <body>
-    <h1>site teste</h1>   
+     
+    <header>
+         <h1>site teste</h1> 
+    </header>
+    
+    <div class="contato">
+        <a href="">a</a>
+        <a href="">b</a>
+        <a href="" class="whats">c</a>
+    </div>
 </body>
 </html>
