--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="contato">
         <a href="">a</a>
         <a href="">b</a>
-        <a href="" class="whats">c</a>
+        <a href="" class="whats"> <img src="img/image.png" alt="">gasgsdgs</a>
     </div>
 </body>
 </html>
