--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
          <h1>site teste</h1> 
     </header>
     
-    <div class="contato">
-        <a href="">a</a>
-        <a href="">b</a>
-        <a href="" class="whats"> <img src="img/image.png" alt="">gasgsdgs</a>
+    <div class="infos">
+        <a href="" class="ligue"><img src="img/phone.png" alt=""></a>
+        <a href="" class="local"><img src="img/local.png" alt=""></a>
+        <a href="" class="fale"> <img src="img/zap.png" alt=""></a>
     </div>
 </body>
 </html>
