--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="infos">
         <a href="" class="ligue"><img src="img/phone.png" alt=""></a>
         <a href="" class="local"><img src="img/local.png" alt=""></a>
-        <a href="" class="fale"> <img src="img/zap.png" alt=""></a>
+        <a href="https://api.whatsapp.com/send?phone=5584991289821&text=ol%C3%A1,%0Avim%20pelo%20o%20seu%20site!" class="fale"> <img src="img/zap.png" alt=""></a>
     </div>
 </body>
 </html>
