--- a/index.html
+++ b/index.html
@@ -17,5 +17,35 @@
         <a href="" class="local"><img src="img/local.png" alt=""></a>
         <a href="https://api.whatsapp.com/send?phone=5584991289821&text=ol%C3%A1,%0Avim%20pelo%20o%20seu%20site!" class="fale"> <img src="img/zap.png" alt=""></a>
     </div>
+
+    <main>
+        <div class="horaCenter">
+        <section class="Horário">
+            <p> 
+                <b>Horário de funcionamento</b>
+                <br>
+                <b>Segunda</b> 08:00 às 16:00
+                <br>
+                <b>Terça</b> 08:00 às 16:00
+                <br>
+                <b>Quarta</b> 08:00 às 16:00
+                <br>
+                <b>Quinta</b> 08:00 às 16:00
+                <br>
+                <b>Sexta</b> 08:00 às 16:00
+                <br>
+                <b>Sábado</b> fechado
+                <br>
+                <b>Domingo</b> fechado
+                <br>
+                <b>Feriado</b> fechado
+                <br>
+            </p>
+        </section>
+        </div>
+        <p class="test">
+            a
+        </p>
+    </main>
 </body>
 </html>
