--- a/index.html
+++ b/index.html
@@ -19,29 +19,45 @@
     </div>
 
     <main>
+        <div class="loja">
+            <section class="imgs">
+                <img src="https://s2.glbimg.com/V0vLGchlI0S7Xll4emaGMIJZSLU=/940x523/e.glbimg.com/og/ed/f/original/2021/01/07/bk-novo_logo.jpg" alt="">
+            </section>  
+            
+               <h2>BK</h2>            <section class="text-img">
+ 
+                <p>O Burger King foi fundado em 1954, em Miami, nos Estados Unidos, pelos empresários James McLamore e David Edgerton. A ideia era criar uma rede de fast food com hambúrgueres maiores e mais saborosos que os concorrentes. O primeiro restaurante foi um sucesso e logo surgiram outras unidades na região.</p>
+            </section>        
+        </div>
+
+
         <div class="horaCenter">
         <section class="Horário">
             <p> 
                 <b>Horário de funcionamento</b>
                 <br>
-                <b>Segunda</b> 08:00 às 16:00
+                <strong>Segunda</strong> 08:00 às 16:00
                 <br>
-                <b>Terça</b> 08:00 às 16:00
+                <strong>Terça</strong> 08:00 às 16:00
                 <br>
-                <b>Quarta</b> 08:00 às 16:00
+                <strong>Quarta</strong> 08:00 às 16:00
                 <br>
-                <b>Quinta</b> 08:00 às 16:00
+                <strong>Quinta</strong> 08:00 às 16:00
                 <br>
-                <b>Sexta</b> 08:00 às 16:00
+                <strong>Sexta</strong> 08:00 às 16:00
                 <br>
-                <b>Sábado</b> fechado
+                <strong>Sábado</strong> fechado
                 <br>
-                <b>Domingo</b> fechado
+                <strong>Domingo</strong> fechado
                 <br>
-                <b>Feriado</b> fechado
+                <strong>Feriado</strong> fechado
                 <br>
             </p>
         </section>
+        </div>
+
+        <div class="sobre">
+            <h1>jscnijanicsiacbihsbai</h1>
         </div>
         <p class="test">
             a
